bynkc/tests/fixtures/negative/104_list_sum_not_numeric/input.bynk
commons c {
  type Item = {
    name: String,
  }
  fn bad(items: List[Item]) -> Int {
    items.sum((i) => i.name)
  }
}
